# recipro

./: Cargo.toml  README.md  canister_ids.json  dfx.json  package-lock.json  package.json  webpack.config.js
src/recipro_backend/: Cargo.toml  main.mo  schema.graphql
src/recipro_backend/src/: lib.rs
src/recipro_frontend/: 404.html  content.css  content.html  content.js  home.html  index.css  index.html  package.json  s2.html  signin.css  signin.html
src/recipro_frontend/assets/: .ic-assets.json5
src/recipro_frontend/assets/img/Home/: ape.jpg:Zone.Identifier  dm.png:Zone.Identifier
src/recipro_frontend/assets/js/: app.js  home.js
src/recipro_frontend/components/: sign-in2.css  sign-in2.html
src/recipro_frontend/src/: App.js  auth.js  index.js
